[workspace]
members = ["proto-gen"]
exclude = ["examples/example-project", "examples/example-integration"]

[workspace.dependencies]
clap = { version = "4.1.13", features = ["derive"] }
proto-gen = { path = "../proto-gen" }
tempfile = "3.4.0"
tonic-build = { version = "0.9.1", default-features = false, features = ["transport", "prost"] }
