[package]
name = "proto-gen-cli"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "LicenseRef-Embark-Proprietary"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
proto-gen = { path = "../proto-gen" }
tempfile = "3.3.0"
tonic-build = { version = "0.8.4", default-features = false, features = ["transport", "prost"] }
