[package]
name = "proto-gen-cli"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "LicenseRef-Embark-Proprietary"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
proto-gen = { path = "../proto-gen" }
tempfile = { workspace = true }
tonic-build = { workspace = true, default-features = false, features = ["transport", "prost"] }
