[package]
authors = ["Embark <opensource@embark-studios.com>"]
categories = ["api-bindings", "command-line-utilities", "development-tools"]
description = "Protobuf to Rust CLI tool"
edition = "2021"
homepage = "https://github.com/embarkstudios/proto-gen"
keywords = ["codegen", "cli", "protobuf"]
license = "MIT OR Apache-2.0"
name = "proto-gen"
publish = true
readme = "../README.md"
repository = "https://github.com/embarkstudios/proto-gen"
version = "0.3.0"
workspace = ".."

[dependencies]
clap = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tonic-build = { workspace = true, default-features = false, features = [
    "transport",
    "prost",
] }
prost-build.workspace = true

[features]
default = []
protoc-tests = []
