[package]
name = "example-project"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "LicenseRef-Embark-Proprietary"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"